styles and more config

--- a/partials/jgg_head.hbs
+++ b/partials/jgg_head.hbs
@@ -1,3 +1,16 @@
+{{!-- Document Settings --}}
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+{{!-- Base Meta --}}
+<title>{{ meta_title }}</title>
+<meta name="HandheldFriendly" content="True" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://use.typekit.net">
+<link rel="stylesheet" href="https://use.typekit.net/cgh6evo.css">
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,600;0,800;1,400&display=swap"
     rel="stylesheet">
+
+{{!-- Styles'n'Scripts --}}
+<link rel="stylesheet" type="text/css" href="{{asset 'built/jgg.css'}}" />
