--- a/default.hbs
+++ b/default.hbs
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html lang="{{@site.lang}}" dir="ltr">
+
 <head>
-  {{!-- Document Settings --}}
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-  {{!-- Base Meta --}}
-  <title>{{ meta_title }}</title>
-  <meta name="HandheldFriendly" content="True" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  {{!-- Styles'n'Scripts --}}
-  <link rel="stylesheet" type="text/css" href="{{asset "built/jgg.css"}}" />
-
+  {{> jgg_head}}
   {{!-- This tag outputs SEO meta+structured data and other important settings --}}
   {{ghost_head}}
-
 </head>
-<body class="{{body_class}}"{{#if feature_image}} data-cover="{{img_url}}"{{/if}}>
+
+<body class="{{body_class}}" {{#if feature_image}} data-cover="{{img_url}}" {{/if}}>
   {{#is "home"}}
-    <a href="/posts/" title="View all posts" class="posts-link">Posts</a>
+  <a href="/posts/" title="View all posts" class="posts-link">Posts</a>
   {{else}}
-    {{> branding}}
+  {{> branding}}
   {{/is}}
   {{{body}}}
 
   <div id="jgbg"></div>
 
-  {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
+  {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some
+  JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already
+  loaded. --}}
   {{{block "scripts"}}}
 
-  {{!-- Ghost outputs important scripts and data with this tag - it should always be the very last thing before the closing body tag --}}
+  {{!-- Ghost outputs important scripts and data with this tag - it should always be the very last thing before the
+  closing body tag --}}
   {{ghost_foot}}
 </body>
 
