--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -1,12 +1,39 @@
 h1, h2, h3, h4, h5 {
     font-weight: normal;
     color: var(--g-color--base);
+    line-height: 1.1;
 }
 
 h1 {
     font-family: var(--font-heading);
     font-size: 1.778em;
-    &.super {
-        font-size: 2.667em;
+    @include mq(md) {
+        font-size: 2.488em;
     }
+    &.super {
+        font-size: clamp(2.48rem, 1vw, 4.3rem);
+    }
+}
+
+h2 {
+    font-size: 1.44em;
+    font-weight: 800;
+}
+h3 {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.subhead {
+    font-size: 1em;
+    @include mq(md) {
+        font-size: 1.2em;
+    }
+}
+
+%small-text {
+    font-size: 0.833em;
+}
+%tiny-text {
+    font-size: 0.694em;
 }
