--- a/assets/scss/jgg.scss
+++ b/assets/scss/jgg.scss
@@ -1,4 +1,8 @@
 @import 'config',
         'reset',
         'type',
-        'base';
+        'base',
+        'layout',
+        'menu',
+        'social',
+        'forms';
