--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -19,3 +19,27 @@ a, a:visited {
         z-index: -1;
     }
 }
+.home-cover {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    right: 0;
+    top: 0;
+    z-index: -1;
+    overflow: hidden;
+    img {
+        object-fit: cover;
+        object-position: center top;
+        width: 100%;
+        height: 100%;
+    }
+    @include mq(md) {
+        width: 30vw;
+        img {
+            object-position: top right;
+        }
+    }
+    @include mq(lg) {
+        width: 33vw;
+    }
+}
