--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -1,3 +1,6 @@
+body * {
+    letter-spacing: -0.03em;
+}
 h1, h2, h3, h4, h5 {
     font-weight: normal;
     color: var(--g-color--base);
@@ -11,9 +14,11 @@ h1 {
         font-size: 2.488em;
     }
     &.super {
-        font-size: clamp(2.48rem, 1vw, 4.3rem);
+        font-size: clamp(2.74em, calc(1rem + 6.73vw), 4.3em);
+        line-height: 1;
     }
 }
+
 
 h2 {
     font-size: 1.44em;
@@ -31,6 +36,17 @@ h3 {
     }
 }
 
+main p {
+    margin-top: 1.25em;
+    line-height: 1.43;
+    a {
+        display: inline-block;
+        z-index: 0;
+    }
+}
+b, strong {
+    font-weight: 600;
+}
 %small-text {
     font-size: 0.833em;
 }
