--- a/partials/user-tools.hbs
+++ b/partials/user-tools.hbs
@@ -1,5 +1,5 @@
-{{#if @member}}
-<a href="#/portal/account">Manage Subscription</a> | <a href="javascript:" data-members-signout>Sign out</a>
-{{else}}
+{{#unless @member}}
 <a href="#/portal/sign-in">Sign In</a> | <a href="#/portal/signup" class="cta">Subscribe</a>
-{{/if}}
+{{else}}
+<a href="#/portal/account">Manage Subscription</a> | <a href="javascript:" data-members-signout>Sign out</a>
+{{/unless}}
