--- a/partials/user-tools.hbs
+++ b/partials/user-tools.hbs
@@ -1,3 +1,6 @@
+
+{{^is "home"}}
+<a href="/">&#8592; Back Home</a> | {{/is}}
 {{#unless @member}}
 <a href="#/portal/sign-in">Sign In</a> | <a href="#/portal/signup" class="cta">Subscribe</a>
 {{else}}
