--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -1,30 +1,34 @@
 #post-panel{
-    background-color: var(--g-color--bg-95);
+    background-color: transparent;
     backdrop-filter: blur(20px);
     position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
-    max-height: 100vh;
+    height: 100vh;
     width: 100vw;
+    max-width: 100vw;
     z-index: 10;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     font-family: var(--font-heading);
-    padding: var(--gutter-sm) 0 var(--gutter-lg);
-    display: none;
-
-}
-button {
-    appearance: none;
-    border: 0;
-    box-shadow: 0;
-    padding: 0;
+    height: 56px;
+    transition: all var(--t-timing) var(--t-effect);
+    @include mq(md) {
+        left: auto;
+        top: 0;
+        height: 100vh;
+        width: 65vw;
+        justify-content: stretch;
+        transform: translateX( calc(65vw - 96px) );
+    }
+    @include mq(lg) {
+        width: 40vw;
+        transform: translateX( calc(40vw - 96px) );
+    }
 }
 .toggle-menu {
-    background: var(--g-color--base-40);
-    color: var(--g-color--bg);
     font-weight: bold;
     font-style: italic;
     display: flex;
@@ -33,33 +37,130 @@ button {
     position: absolute;
     bottom: 0;
     width: 100%;
+    z-index: 10;
     .icon-menu {
         flex: none;
         order: 2;
         height: 24px;
         width: 24px;
     }
+    svg {
+        * {
+            transition: transform 800ms var(--t-effect);
+        }
+    }
     .newsletter-title {
         @extend h3;
         color: inherit;
     }
-    .menu-open & {
-        background: var(--g-color--base-90);
+    @include mq(md) {
+        width: var(--menu-width);
+        top: 0;
+        left: 0;
+        flex-direction: column;
+        align-items: center;
+        padding: calc( var(--grid-unit) * 4 );
+        position: absolute;
+        .icon-menu {
+            order: 1;
+        }
+        .newsletter-title {
+            order: 2;
+            white-space: nowrap;
+            transform-origin: top center;
+            transform: rotate(-90deg) translate(64px, -16px);
+            font-size: 2rem;
+
+        }
+    }
+}
+.panel-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    opacity: 0;
+    @include mq(md) {
+        opacity: 1;
+        margin-left: var(--menu-width);
+    }
+}
+
+
+.post-list,
+.user-tools {
+    padding: var(--grid-unit) var(--gutter-sm) var(--gutter-lg);
+    @include mq(md) {
+        padding: calc( var(--grid-unit) * 4) var(--gutter-sm) calc( var(--grid-unit) * 4) calc( var(--grid-unit) * 4);
+    }
+}
+.user-tools {
+    background-color: var(--g-color--bg-dark);
+    font-family: var(--font-base);
+    position: sticky;
+    top: 0;
+    a {
+        z-index: 0;
     }
 }
 .post-list {
     a {
         display: block;
-        padding: var(--grid-unit) var(--gutter-sm);
+        padding: var(--grid-unit) 0;
         color: var(--g-color--body);
         font-weight: bold;
         &:after {
             display: none;
         }
     }
+    @include mq(md) {
+        padding-bottom: calc( var(--grid-unit) * 6);
+        a {
+            padding-left: 0;
+            font-size: 1.167em;
+            &:hover {
+                color: var(--g-color--accent);
+            }
+        }
+    }
 }
 
-.user-tools {
-    padding: var(--grid-unit) var(--gutter-sm) var(--gutter-sm);
-    font-family: var(--font-base);
+.toggle-menu {
+    background-color: var(--menu-button-bg);
+    color: var(--g-color--base);
+    &:hover {
+        background-color: #DED5CC;
+    }
+    .home-template & {
+        background-color: var(--g-color--base-40);
+        color: var(--g-color--bg);
+        &:hover {
+            background-color: var(--g-color--base-90);
+        }
+    }
+}
+
+.menu-open {
+    overflow: hidden;
+    .home-template .toggle-menu {
+        background-color: var(--g-color--base-90);
+    }
+    .panel-inner {
+        opacity: 1;
+    }
+    #post-panel {
+        height: 100vh;
+        background-color: rgba(var(--g-color--bg-dark), 0.9);
+        @include mq(md) {
+            transform: translateX(0);
+        }
+    }
+    svg {
+        .first {
+            transform: translateX(-11px);
+        }
+        .last {
+            transform: translateX(11px);
+        }
+    }
 }
