--- a/default.hbs
+++ b/default.hbs
@@ -23,11 +23,12 @@
   {{/is}}
 
   {{> social}}
+  {{> menu}}
   {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some
   JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already
   loaded. --}}
   {{{block "scripts"}}}
-
+  {{> jgg_foot}}
   {{!-- Ghost outputs important scripts and data with this tag - it should always be the very last thing before the
   closing body tag --}}
   {{ghost_foot}}
