--- a/partials/jgg_head.hbs
+++ b/partials/jgg_head.hbs
@@ -6,11 +6,21 @@
 <title>{{ meta_title }}</title>
 <meta name="HandheldFriendly" content="True" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="preconnect" href="https://script.hotjar.com">
+<link rel="preconnect" href="https://vars.hotjar.com">
+<link rel="preconnect" href="https://www.google-analytics.com">
+<link rel="preconnect" href="https://www.googletagmanager.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="preconnect" href="https://use.typekit.net">
 <link rel="stylesheet" href="https://use.typekit.net/cgh6evo.css">
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400,600;0,600;0,800;1,400&display=swap"
     rel="stylesheet">
-
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5H4MGXH');</script>
+<!-- End Google Tag Manager -->
 {{!-- Styles'n'Scripts --}}
 <link rel="stylesheet" type="text/css" href="{{asset 'built/jgg.css'}}" />
