add cloudinary stuff in

--- a/post.hbs
+++ b/post.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 {{#post}}
   <figure class="post-cover">
-    <img src="{{img_url feature_image absolute="true"}}" alt="{{excerpt}}" width="450" height="290" />
+    <img src="https://res.cloudinary.com/joelgoodman/image/fetch/w_800,q_auto,f_auto,dpr_auto/{{img_url feature_image absolute="true"}}" alt="{{excerpt}}" width="450" height="290" />
   </figure>
   <section class="post-body">
     <header>
