--- a/default.hbs
+++ b/default.hbs
@@ -19,7 +19,7 @@
   {{#is "home"}}
     {{#if @site.cover_image}}
       <figure class="home-cover">
-        <img role="decorative" src="https://res.cloudinary.com/joelgoodman/image/fetch/f_auto,q_85,w_480,h_900,c_fill,g_auto/{{img_url @site.cover_image}}" alt="Silouetted person looking out from an observatory across a hazy city with rolling hills." width="480" height="900" />
+        <img role="decorative" src="https://res.cloudinary.com/joelgoodman/image/fetch/f_auto,q_85,w_480,h_900,c_fill,g_auto/{{img_url @site.cover_image absolute="true"}}" alt="Silouetted person looking out from an observatory across a hazy city with rolling hills." width="480" height="900" />
       </figure>
     {{/if}}
   {{/is}}
