Move Google Fonts to CSS, fix preconnect

--- a/partials/jgg_head.hbs
+++ b/partials/jgg_head.hbs
@@ -10,11 +10,9 @@
 <link rel="preconnect" href="https://vars.hotjar.com">
 <link rel="preconnect" href="https://www.google-analytics.com">
 <link rel="preconnect" href="https://www.googletagmanager.com">
-<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://use.typekit.net">
 <link rel="stylesheet" href="https://use.typekit.net/cgh6evo.css">
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400,600;0,600;0,800;1,400&display=swap"
-    rel="stylesheet">
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
