--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -1,4 +1,5 @@
 @import 'helpers';
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,600;0,800;1,400;1,600&display=swap');
 // CSS Variables
 :root {
     --base-font-size: 112.5%; // 18px
