--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -30,7 +30,7 @@ a, a:visited {
     overflow: hidden;
     img {
         object-fit: cover;
-        object-position: center top;
+        object-position: top left;
         width: 100%;
         height: 100%;
     }
