subscribe form messages

--- a/partials/jgg_foot.hbs
+++ b/partials/jgg_foot.hbs
@@ -1,1 +1,3 @@
-<script src="{{asset 'built/jgg.js'}}" defer async></script>
+<script>
+    const menu=document.querySelector(".toggle-menu");menu&&menu.addEventListener("click",e=>{e.preventDefault(),document.body.classList.contains("menu-open")?document.body.classList.remove("menu-open"):document.body.classList.add("menu-open")});
+</script>
