--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -7,14 +7,42 @@ form {
     margin-top: 1.5em;
     &.error {
         border-color: var(--state-error);
+        .message-error {
+            background: var(--state-error);
+            color: var(--g-color--bg-95);
+            opacity: 1;
+            visibility: visible;
+        }
     }
     &.success {
         border-color: var(--state-success);
+        .message-success {
+            background: var(--state-success);
+            color: var(--g-color--bg-95);
+            opacity: 1;
+            visibility: visible;
+        }
     }
     &.loading {
         border-color: var(--state-loading);
     }
 }
+
+.message-success,
+.message-error {
+    display: block;
+    width: calc(100% + 2px);
+    font-size: 0.85em;
+    position: absolute;
+    bottom: 0;
+    left: -1px;
+    transform: translateY(100%);
+    opacity: 0;
+    visibility: hidden;
+    transition: all var(--t-timing) var(--t-effect);
+    padding: 8px;
+}
+
 input[type],
 button,
 textarea {
@@ -60,10 +88,12 @@ input[type="submit"] {
 .subscribe {
     max-width: 625px;
     justify-content: stretch;
+    position: relative;
     input[type="email"] {
         flex: 1 1 auto;
         padding: var(--grid-unit);
     }
+
     @include mq(md) {
         width: 80%;
     }
