--- a/partials/jgg_head.hbs
+++ b/partials/jgg_head.hbs
@@ -12,7 +12,9 @@
 <link rel="preconnect" href="https://www.googletagmanager.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://use.typekit.net">
-<link rel="stylesheet" href="https://use.typekit.net/cgh6evo.css">
+<link rel="preconnect" href="https://js.stripe.com">
+<link rel="preconnect" href="https://unpkg.com">
+<link rel="stylesheet" href="https://use.typekit.net/cgh6evo.css" defer>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -21,4 +23,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-5H4MGXH');</script>
 <!-- End Google Tag Manager -->
 {{!-- Styles'n'Scripts --}}
-<link rel="stylesheet" type="text/css" href="{{asset 'built/jgg.css'}}" />
+<link rel="stylesheet" type="text/css" href="{{asset 'built/jgg.css'}}" defer />
