--- a/partials/subscribe-form.hbs
+++ b/partials/subscribe-form.hbs
@@ -1,4 +1,10 @@
 <form class="subscribe" data-members-form>
   <input data-members-email type="email" placeholder="Your best email" required="true"/>
   <button type="submit">Subscribe</button>
+  <div class="message-success">
+      <strong>Great!</strong> Check your inbox and click the link to confirm your subscription.
+  </div>
+  <div class="message-error">
+      Please enter a valid email address!
+  </div>
 </form>
