--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -3,10 +3,13 @@
     width: 100%;
     max-width: 550px;
     .super {
-        max-width: 505px;
+        max-width: 298px;
     }
     @include mq(sm) {
         padding: 6.5vh calc(var(--grid-unit) * 3) 6.5vh 10vw;
+        .super {
+            max-width: 505px;
+        }
     }
     @include mq(md) {
         padding-left: 0;
@@ -15,7 +18,10 @@
 }
 
 main {
-    padding: calc( var(--grid-unit) * 8 ) var(--gutter-sm) var(--gutter-sm);
+    padding: calc( var(--grid-unit) * 3 ) var(--gutter-sm) calc( var(--grid-unit) * 8 );
+    @include mq(sm) {
+        padding: calc( var(--grid-unit) * 8 ) var(--gutter-sm) var(--gutter-sm);
+    }
     @include mq(md) {
         width: 66vw;
         padding-left: 10vw;
