--- a/partials/jgg_foot.hbs
+++ b/partials/jgg_foot.hbs
@@ -1,3 +1,6 @@
 <script>
     const menu=document.querySelector(".toggle-menu");menu&&menu.addEventListener("click",e=>{e.preventDefault(),document.body.classList.contains("menu-open")?document.body.classList.remove("menu-open"):document.body.classList.add("menu-open")});
 </script>
+<noscript>
+    <link rel="stylesheet" href="https://use.typekit.net/cgh6evo.css">
+</noscript>
