--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,6 +1,12 @@
 html {
     background-color: var(--g-color--bg);
     color: var(--g-color--base);
+    height: 100%;
+}
+body {
+    height: 100%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 a, a:visited {
     color: var(--g-color--base);
@@ -28,11 +34,15 @@ a, a:visited {
     top: 0;
     z-index: -1;
     overflow: hidden;
+    display: none;
     img {
         object-fit: cover;
         object-position: top left;
         width: 100%;
         height: 100%;
+    }
+    @include mq(sm) {
+        display: block;
     }
     @include mq(md) {
         width: 30vw;
