--- a/partials/jgg_head.hbs
+++ b/partials/jgg_head.hbs
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://use.typekit.net">
 <link rel="preconnect" href="https://js.stripe.com">
 <link rel="preconnect" href="https://unpkg.com">
-<link rel="stylesheet" href="https://use.typekit.net/cgh6evo.css" defer>
+<link rel="preload" as="style" href="https://use.typekit.net/cgh6evo.css" onload="this.onload=null;this.rel='stylesheet'">
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
