--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -64,6 +64,7 @@ input[type="submit"] {
     appearance: none;
     border: 0;
     box-shadow: 0;
+    margin: 0;
     cursor: pointer;
     font-family: inherit;
     font-size: .85em;
@@ -121,7 +122,13 @@ input[type="submit"] {
     h2 {
         font-weight: 600;
     }
+    .subscribe {
+        width: 100%;
+    }
     @include mq(sm) {
         padding: var(--gutter-md);
+    }
+    @include mq(lg) {
+        margin-bottom: var(--gutter-lg);
     }
 }
