--- a/assets/scss/_ghost.scss
+++ b/assets/scss/_ghost.scss
@@ -27,6 +27,14 @@
             height: 100%;
         }
     }
+    &-embed-card {
+        width: 100%;
+        iframe {
+            height: 100%;
+            min-height: 155px;
+            width: 100%;
+        }
+    }
 }
 
 .kg-bookmark-card,
