Add Cloudinary storage adapter and fix inline images

--- a/assets/scss/_ghost.scss
+++ b/assets/scss/_ghost.scss
@@ -35,6 +35,15 @@
             width: 100%;
         }
     }
+    &-image-card {
+        display: block;
+        width: 100%;
+        height: auto;
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    }
 }
 
 .kg-bookmark-card,
